# ClientHTTP_windows

./: .gitattributes  CMakeLists.txt  README.md  cmakelists.txt
clientHTTP/: CMakeLists.txt  cmakelists.txt
clientHTTP/include/: base64.h  json.h  operations.h  sharedResourceManager.h  stringUtil.h  systemInformation.h  tcpNetworkManager.h  utilities.h
clientHTTP/src/: base64.cpp  json.cpp  main.cpp  operations.cpp  sharedResourceManager.cpp  systemInformation.cpp  tcpNetworkManager.cpp  utilities.cpp
curlFileTransfer/: cmakelists.txt
curlFileTransfer/export/: export.def
curlFileTransfer/include/: fileTransferService.h
curlFileTransfer/lib/: libcurl_x64.lib  libcurl_x86.lib
curlFileTransfer/src/: fileTransferService.cpp  stringUtil.cpp
executeCommands/: CMakeLists.txt
executeCommands/export/: export.def
executeCommands/include/: executeCommands.h
executeCommands/src/: executeCommands.cpp
filemanager/: CMakeLists.txt  cmakelists.txt
filemanager/export/: export.def
filemanager/include/: filemanager.h
filemanager/src/: filemanager.cpp
json/: json.cpp  json.h
